# soku

./: CMakeLists.txt
resources/bmaps/cirno/: perfect-freeze.lua
src/: game.hpp  input.cpp  input.hpp  main.cpp  soku.cpp  soku.hpp
